[gd_scene load_steps=38 format=2]

[ext_resource path="res://Minigame/Minigame_Gym/GymPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/mining.png" type="Texture" id=2]
[ext_resource path="res://assets/idle.png" type="Texture" id=3]
[ext_resource path="res://assets/roll.png" type="Texture" id=4]
[ext_resource path="res://assets/jump.png" type="Texture" id=5]
[ext_resource path="res://img/Run Machine.png" type="Texture" id=6]
[ext_resource path="res://assets/run.png" type="Texture" id=7]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Minigame/Minigame_Gym/GymGame.gd" type="Script" id=9]
[ext_resource path="res://img/Game Boy Advance - Metal Slug Advance - Final Mission Gym.png" type="Texture" id=10]
[ext_resource path="res://img/felicidade_sprite-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://NES - Monopoly - Money.png" type="Texture" id=12]
[ext_resource path="res://img/Pontuacao(1).png" type="Texture" id=13]
[ext_resource path="res://music/musicgym.mp3" type="AudioStream" id=14]

[sub_resource type="Animation" id=81]
resource_name = "Ground_Move"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, -11 ), Vector2( 72, -11 ) ]
}

[sub_resource type="Animation" id=82]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 89, -11 ) ]
}

[sub_resource type="RectangleShape2D" id=74]
extents = Vector2( 24, 10 )

[sub_resource type="Animation" id=95]
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=96]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=97]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 2 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "roll_prefinished"
}, {
"args": [  ],
"method": "roll_finished"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=98]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=73]
radius = 7.0

[sub_resource type="CapsuleShape2D" id=99]
radius = 2.96063
height = 0.0

[sub_resource type="DynamicFont" id=100]
size = 15
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=102]
size = 90
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=101]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=103]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=78]
bg_color = Color( 0.172549, 0.776471, 0.121569, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 7

[sub_resource type="StyleBoxFlat" id=79]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=80]
size = 11
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=104]
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 3, 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=105]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=106]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=107]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 2 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "roll_prefinished"
}, {
"args": [  ],
"method": "roll_finished"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=108]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=109]
extents = Vector2( 200, 100 )

[node name="GymGame" type="Node2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 184, -61 )
texture = ExtResource( 10 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 10 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 89, -11 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D"]
root_node = NodePath("../Sprite")
anims/Ground_Move = SubResource( 81 )
anims/RESET = SubResource( 82 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 74 )

[node name="GymPlayer" type="KinematicBody2D" parent="."]
position = Vector2( 0, -8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GymPlayer"]
texture = ExtResource( 2 )
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="GymPlayer"]
playback_default_blend_time = 1.0
anims/Idle_Right = SubResource( 95 )
anims/Jump_Right = SubResource( 96 )
anims/RESET = SubResource( 51 )
anims/Roll_Right = SubResource( 97 )
anims/Run_Right = SubResource( 98 )

[node name="UPbox" type="CollisionShape2D" parent="GymPlayer"]
position = Vector2( 1, -7 )
shape = SubResource( 73 )

[node name="DOWNbox" type="CollisionShape2D" parent="GymPlayer"]
position = Vector2( 0, 4.96063 )
rotation = -1.5708
shape = SubResource( 99 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 96, -56 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="Pontos" type="Label" parent="."]
margin_left = 193.0
margin_top = -127.0
margin_right = 245.0
margin_bottom = -82.0
custom_fonts/font = SubResource( 100 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="GameOver" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 320, 179 )
scale = Vector2( 0.334, 0.334 )
texture = ExtResource( 13 )

[node name="ExitButton" type="Button" parent="CanvasLayer2/GameOver"]
margin_left = -751.0
margin_top = 243.0
margin_right = -170.0
margin_bottom = 462.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="CanvasLayer2/GameOver"]
margin_left = 147.0
margin_top = 243.0
margin_right = 725.0
margin_bottom = 456.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer2/GameOver/Restart"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 143.713
margin_top = 77.8444
margin_right = 443.713
margin_bottom = 210.844
custom_fonts/font = SubResource( 102 )
text = "R$00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontuacao" type="Label" parent="CanvasLayer2"]
margin_left = 30.0
margin_top = 124.0
margin_right = 306.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 101 )
text = "pontuação: 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PontuacaoRecord" type="Label" parent="CanvasLayer2"]
margin_left = 360.0
margin_top = 124.0
margin_right = 588.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 103 )
text = "RECORDE: 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlBarMoney" type="Control" parent="CanvasLayer2"]
anchor_left = 0.012
anchor_right = 0.012
margin_left = -81.68
margin_top = 8.0
margin_right = -41.68
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="happy" type="ProgressBar" parent="CanvasLayer2/ControlBarMoney"]
light_mask = 9
anchor_left = 0.066
anchor_right = 0.074
margin_left = 115.36
margin_top = 181.0
margin_right = 216.24
margin_bottom = 189.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.843137, 0.258824, 0.258824, 1 )
custom_colors/font_color_shadow = Color( 0.796078, 0.396078, 0.396078, 1 )
custom_styles/fg = SubResource( 78 )
custom_styles/bg = SubResource( 79 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="felicidade_bar" type="Sprite" parent="CanvasLayer2/ControlBarMoney/happy"]
position = Vector2( 104.41, 4.12518 )
scale = Vector2( 0.20738, 0.12209 )
texture = ExtResource( 11 )
hframes = 3
vframes = 4

[node name="dindin" type="Label" parent="CanvasLayer2/ControlBarMoney"]
margin_left = 200.0
margin_top = 196.0
margin_right = 220.0
margin_bottom = 213.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 80 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="din_sprite" type="Sprite" parent="CanvasLayer2/ControlBarMoney/dindin"]
position = Vector2( -16.0001, 8 )
rotation = 1.57429
scale = Vector2( 0.75, 0.883333 )
texture = ExtResource( 12 )
hframes = 7
frame = 3

[node name="GameOverPlayer" type="Area2D" parent="CanvasLayer2"]
position = Vector2( 467, 214 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="CanvasLayer2/GameOverPlayer"]
texture = ExtResource( 2 )
flip_h = true
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2/GameOverPlayer"]
autoplay = "Idle_Right"
playback_default_blend_time = 1.0
anims/Idle_Right = SubResource( 104 )
anims/Jump_Right = SubResource( 105 )
anims/RESET = SubResource( 106 )
anims/Roll_Right = SubResource( 107 )
anims/Run_Right = SubResource( 108 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -95, -159 )
shape = SubResource( 109 )
action = "ui_up"

[connection signal="pressed" from="CanvasLayer2/GameOver/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer2/GameOver/Restart" to="." method="_on_Restart_pressed"]
